# mashrom_depi_project-

./: README.md  hello.py  pyproject.toml
data/: cleaned_categorical_features(1).csv  cleaned_numerical_features(1).csv  final_categorical_features.csv  final_targets.csv  get_data.py  secondary_mushroom_features.csv  secondary_mushroom_targets.csv
data/preprocessed/: X_test.csv  X_train.csv  X_val.csv  y_test.csv  y_train.csv  y_val.csv
notebooks/: Copy_of_Classification_Task.ipynb  EDA.ipynb  feature_selection.ipynb  intial analysis.ipynb  project.ipynb
notebooks/.ipynb_checkpoints/: project-checkpoint.ipynb  util-checkpoint.py
src/: data_load.py  util.py
